# r2fs

./: Cargo.toml
src/: main.rs  sig.rs  utils.rs
src/parsers/: list_buckets_parser.rs  mod.rs
src/r2client/: mod.rs  sig.rs
src/r2client/parsers/: list_bucket_objects_parser.rs  list_buckets_parser.rs  mod.rs
