[package]
name = "r2fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudflare-rs = "0.7.0"
fuser = "0.12.0"
reqwest = { version="0.11.14", features = ["blocking", "json"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
