[package]
name = "r2fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sign-v4 = "0.2.0"
chrono = "0.4.24"
cloudflare-rs = "0.7.0"
ctrlc = "3.2.5"
dotenv = "0.15.0"
fuser = "0.12.0"
libc = "0.2.140"
reqwest = { version="0.11.14", features = ["blocking", "json"] }
serde = "1.0.158"
serde-xml-rs = "0.6.0"
serde_json = "1.0.93"
sha2 = "0.10.6"
tokio = { version = "1.25.0", features = ["full"] }
